@@ -53,14 +53,14 @@ jobs:
         name: Validate coverage
         steps:
             - uses: actions/checkout@v2
-            - name: Setup python 3.8
+            - name: Setup python 3.10
               uses: actions/setup-python@v2
               with:
-                  python-version: 3.8
+                  python-version: "3.10"
                   architecture: x64
 
             - run: pip install tox
-            - run: tox -e py38,coverage
+            - run: tox -e py310,coverage
     docs:
         runs-on: ubuntu-latest
         name: Build the documentation
@@ -69,7 +69,7 @@ jobs:
             - name: Setup python
               uses: actions/setup-python@v2
               with:
-                  python-version: 3.8
+                  python-version: "3.10"
                   architecture: x64
             - run: pip install tox
             - run: tox -e docs
@@ -81,7 +81,7 @@ jobs:
             - name: Setup python
               uses: actions/setup-python@v2
               with:
-                  python-version: 3.8
+                  python-version: "3.10"
                   architecture: x64
             - run: pip install tox
             - run: tox -e lint
