@@ -18,9 +18,9 @@ Waitress
 
 Waitress is a production-quality pure-Python WSGI server with very acceptable
 performance. It has no dependencies except ones which live in the Python
-standard library. It runs on CPython on Unix and Windows under Python 3.6+. It
-is also known to run on PyPy (version 3.6 compatible) on UNIX. It supports
-HTTP/1.0 and HTTP/1.1.
+standard library. It runs on CPython on Unix and Windows under Python 3.7+. It
+is also known to run on PyPy 3 (version 3.7 compatible python) on UNIX. It
+supports HTTP/1.0 and HTTP/1.1.
 
 For more information, see the "docs" directory of the Waitress package or visit
 https://docs.pylonsproject.org/projects/waitress/en/latest/
