@@ -7,8 +7,8 @@ Waitress
 Waitress is meant to be a production-quality pure-Python WSGI server with very
 acceptable performance. It has no dependencies except ones which live in the
 Python standard library. It runs on CPython on Unix and Windows under Python
-3.6+. It is also known to run on PyPy 7.3.2 (PyPy3) on UNIX.  It supports
-HTTP/1.0 and HTTP/1.1.
+3.7+. It is also known to run on PyPy 3 (python version 3.7+) on UNIX.  It
+supports HTTP/1.0 and HTTP/1.1.
 
 
 Extended Documentation
