@@ -13,10 +13,10 @@ classifiers =
     License :: OSI Approved :: Zope Public License
     Programming Language :: Python
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Operating System :: OS Independent
@@ -37,7 +37,7 @@ maintainer_email = pylons-discuss@googlegroups.com
 package_dir=
     =src
 packages=find:
-python_requires = >=3.6.0
+python_requires = >=3.7.0
 
 [options.entry_points]
 paste.server_runner =
