@@ -1,15 +1,14 @@
 [tox]
 envlist =
     lint,
-    py36,py37,py38,py39,pypy3,
-    docs,
-    coverage
-isolated_build = True
+    py37,py38,py39,py310,pypy3,
+    coverage,
+    docs
 
 [testenv]
 commands =
     python --version
-    pytest {posargs:}
+    pytest --cov {posargs:}
 extras =
     testing
 setenv =
@@ -25,46 +24,37 @@ deps =
     coverage
 setenv =
     COVERAGE_FILE=.coverage
-depends = py38
-
-[testenv:lint]
-skip_install = True
-commands =
-    black --check --diff .
-    isort --check-only --df src/waitress tests
-    check-manifest
-    # flake8 src/waitress/ tests
-    # build sdist/wheel
-    python -m pep517.build .
-    twine check dist/*
-deps =
-    black
-    check-manifest
-    flake8
-    flake8-bugbear
-    isort
-    pep517
-    readme_renderer
-    twine
 
 [testenv:docs]
 whitelist_externals =
     make
 commands =
-    make -C docs html BUILDDIR={envdir} SPHINXOPTS="-W -E"
+    make -C docs html BUILDDIR={envdir} "SPHINXOPTS=-W -E -D suppress_warnings=ref.term"
 extras =
     docs
 
-[testenv:run-flake8]
+[testenv:lint]
 skip_install = True
 commands =
-    flake8 src/waitress/ tests
+    isort --check-only --df src/waitress tests
+    black --check --diff .
+    check-manifest
+    # flake8 src/waitress/ tests
+    # build sdist/wheel
+    python -m build .
+    twine check dist/*
 deps =
+    black
+    build
+    check-manifest
     flake8
     flake8-bugbear
+    isort
+    readme_renderer
+    twine
 
-[testenv:run-format]
-skip_install = True
+[testenv:format]
+skip_install = true
 commands =
     isort src/waitress tests
     black .
@@ -80,12 +70,12 @@ commands =
     # Make sure we aren't forgetting anything
     check-manifest
     # build sdist/wheel
-    python -m pep517.build .
+    python -m build .
     # Verify all is well
     twine check dist/*
 
 deps =
-    readme_renderer
+    build
     check-manifest
-    pep517
+    readme_renderer
     twine
